# NexusAi

./: .gitignore  README.md  pubspec.yaml
ai_backend/: .gitignore  main.py  pyproject.toml
ai_backend/app/: config.py  prompts.py  routes.py  services.py
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/nexus_ai/: MainActivity.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/model/: chat_model.dart
lib/screen/: chat_screen.dart
lib/screen/widgets/: chat_input_bar.dart  message_bubble.dart  typing_indicator.dart
lib/services/: chat_services.dart  file_picker_service.dart  voice_recorder_service.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
