[project]
name = "ai-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.1",
    "google-generativeai>=0.8.6",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.49.0",
    "python-multipart>=0.0.20",
    "Pillow>=11.2.1",
]
